unpackaged/main/default/objects/Check_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Check Logs</relationshipLabel>
    <relationshipName>Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>