unpackaged/main/default/objects/Check_Log__c/fields/Compliance_Check_Rec_Sent_Dates__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Check_Rec_Sent_Dates__c</fullName>
    <formula>IF(
  OR(ISBLANK(Sent_Date__c), ISBLANK(Received_Date__c)),
  false,
  Sent_Date__c &gt;
  (
    Received_Date__c + 1 +
    CASE(
      MOD(Received_Date__c + 1 - DATE(1900,1,6), 7),
      0, 2,
      1, 1,
      0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Check: Rec/Sent Dates</label>
    <type>Checkbox</type>
</CustomField>