unpackaged/main/default/objects/Check_Log__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <formula>Financial_Account__r.Custodian__c</formula>
    <label>Custodian</label>
    <type>Text</type>
</CustomField>