unpackaged/main/default/objects/Check_Log__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Financial Advisor Teams</relationshipLabel>
    <relationshipName>Financial_Advisor_Team_Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>