unpackaged/main/default/objects/Check_Log__c/fields/Manually_Entered_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Manually_Entered_Account_Number__c</fullName>
    <description>Field to capture the manually entered account number form log a check flow</description>
    <label>Manually Entered Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>