unpackaged/main/default/objects/Check_Log__c/fields/Method_of_Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Forwarding__c</fullName>
    <label>Method of Forwarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Remote Deposit</fullName>
                <label>Mobile Deposit</label>
            </value>
            <value>
                <fullName>Returned to Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>