unpackaged/main/default/objects/Check_Log__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>