unpackaged/main/default/objects/Check_Log__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Check Logs</relationshipLabel>
    <relationshipName>Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>