unpackaged/main/default/objects/Check_Log__c/listViews/Check_Log_Ops_Review.listView-meta.xml
<ListView>
    <fullName>Check_Log_Ops_Review</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Carrier__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Status__c</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <label>Check Log - Ops Review</label>
    <sharedTo>
        <group>Operations</group>
    </sharedTo>
</ListView>