unpackaged/main/default/objects/Check_Log__c/listViews/checking_in_ops.listView-meta.xml
<ListView>
    <fullName>checking_in_ops</fullName>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Received_Date__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Case__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Custodian__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Status__c</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <label>OPS - CHECKING IN</label>
</ListView>