unpackaged/main/default/objects/Check_Log__c/listViews/Sent_and_Received_Check_Logs.listView-meta.xml
<ListView>
    <fullName>Sent_and_Received_Check_Logs</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Carrier__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delivered</value>
    </filters>
    <label>Check Log - Received and Sent</label>
</ListView>